# CorvidLabs_spec-sync

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  SCOPE.md  SECURITY.md  action.yml  specsync.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  spec-check.yml
.specsync/: .gitignore  config.toml  hashes.json  registry.toml
docs/: ai-agents.md  architecture.md  book.toml  cli.md  configuration.md  cross-project-refs.md  github-action.md  index.md  quickstart.md  spec-format.md  vscode-extension.md  workflow.md
docs/src/: SUMMARY.md  ai-agents.md  architecture.md  cli.md  configuration.md  cross-project-refs.md  github-action.md  index.md  quickstart.md  spec-format.md  vscode-extension.md  why-specsync.md  workflow.md
docs/theme/: custom.css
examples/: specsync.toml
specs/ai/: ai.spec.md  context.md  requirements.md  tasks.md
specs/archive/: archive.spec.md  context.md  requirements.md  tasks.md
specs/changelog/: changelog.spec.md  context.md  tasks.md
specs/cli/: cli.spec.md  context.md  requirements.md  tasks.md
specs/cli_args/: cli_args.spec.md
specs/cmd_check/: cmd_check.spec.md
specs/cmd_comment/: cmd_comment.spec.md  requirements.md
specs/cmd_init/: cmd_init.spec.md
specs/cmd_lifecycle/: cmd_lifecycle.spec.md  requirements.md
specs/cmd_migrate/: cmd_migrate.spec.md  context.md  requirements.md  tasks.md
specs/cmd_report/: cmd_report.spec.md
specs/cmd_resolve/: cmd_resolve.spec.md
specs/cmd_rules/: cmd_rules.spec.md  context.md  requirements.md  tasks.md
specs/cmd_stale/: cmd_stale.spec.md  requirements.md
specs/commands/: commands.spec.md
specs/comment/: comment.spec.md  context.md  requirements.md  tasks.md
specs/compact/: compact.spec.md  context.md  tasks.md
specs/config/: config.spec.md  context.md  requirements.md  tasks.md
specs/exports/: context.md  exports.spec.md  requirements.md  tasks.md
specs/generator/: context.md  generator.spec.md  requirements.md  tasks.md
specs/git_utils/: git_utils.spec.md  requirements.md
specs/github/: context.md  github.spec.md  requirements.md  tasks.md
specs/hash_cache/: context.md  hash_cache.spec.md  tasks.md
specs/hooks/: context.md  hooks.spec.md  requirements.md  tasks.md
specs/manifest/: manifest.spec.md  requirements.md
specs/mcp/: context.md  mcp.spec.md  requirements.md  tasks.md
src/: ai.rs  archive.rs  changelog.rs  cli.rs  comment.rs  compact.rs  config.rs  deps.rs  generator.rs  git_utils.rs  hash_cache.rs  hooks.rs  ignore.rs  main.rs  mcp.rs  merge.rs  output.rs  parser.rs  registry.rs  scoring.rs  types.rs  util.rs  validator.rs  view.rs  watch.rs
tests/: integration.rs
(+79 files in other folders)
