[package]
name = "specsync"
version = "1.0.0"
edition = "2024"
description = "Bidirectional spec-to-code validation — language-agnostic, blazing fast"
license = "MIT"
repository = "https://github.com/corvid-agent/specsync"
keywords = ["spec", "documentation", "validation", "coverage"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "specsync"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
colored = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
opt-level = 3
