[package]
name = "specsync"
version = "2.3.3"
edition = "2024"
description = "Bidirectional spec-to-code validation — language-agnostic, blazing fast"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CorvidLabs/spec-sync"
repository = "https://github.com/CorvidLabs/spec-sync"
keywords = ["spec", "documentation", "validation", "coverage"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "specsync"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
colored = "3"
notify = "7"
notify-debouncer-full = "0.4"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
opt-level = 3
