[package]
name = "specsync"
version = "4.1.2"
edition = "2024"
rust-version = "1.85"
description = "Bidirectional spec-to-code validation with schema column checking — 11 languages, single binary"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CorvidLabs/spec-sync"
repository = "https://github.com/CorvidLabs/spec-sync"
keywords = ["spec", "documentation", "validation", "coverage", "code-quality"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["tests/", "specs/", ".github/", ".specsync/"]

[[bin]]
name = "specsync"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
colored = "3"
notify = "7"
notify-debouncer-full = "0.4"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
sha2 = "0.10"
ureq = { version = "3", features = ["json"] }
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
opt-level = 3
